*SVN*

* Removed deprecated methods [DHH]:

  - ActionController::Base#keep_flash (use flash.keep instead)
  - ActionController::Base#expire_matched_fragments (just call expire_fragment with a regular expression)
  - ActionController::Base.template_root/= methods (use ActionController#Base.view_paths/= instead)
  - ActionController::Base.cookie (use ActionController#Base.cookies[]= instead)

* Removed the deprecated behavior of appending ".png" to image_tag/image_path calls without an existing extension [DHH]

* Removed ActionController::Base.scaffold -- it went through the whole idea of scaffolding (card board walls you remove and tweak one by one). Use the scaffold generator instead (it does resources too now!) [DHH]

* Optimise named route generation when using positional arguments.  [Koz]

  This change delivers significant performance benefits for the most
  common usage scenarios for modern rails applications by avoiding the
  costly trip through url_for.  Initial benchmarks indicate this is
  between 6 and 20 times as fast.

* Explicitly require active_record/query_cache before using it.  [Jeremy Kemper]

* Fix layout overriding response status.  #9476 [lotswholetime]

* Add field_set_tag for generating field_sets, closes #9477. [djanowski]

* Allow additional parameters to be passed to named route helpers when using positional arguments.  Closes #8930 [ian.w.white@gmail.com]

* Make render :partial work with a :collection of Hashes, previously this wasn't possible due to backwards compatibility restrictions.  [lifofifo]

* request.host works with IPv6 addresses.  #9458 [yuya]

* Fix bug where action caching sets the content type to the ActionCachePath object.  Closes #9282 [mindforge]

* Find layouts even if they're not in the first view_paths directory.  Closes #9258 [caio]

* Major improvement to the documentation for the options / select form helpers. Closes #9038 [kampers, jardeon, wesg]
